--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <title>My Website</title>
-    <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8" />
+    <title>Ahmed Ryan</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <!-- Content of your website -->
