--- a/index.html
+++ b/index.html
@@ -4,138 +4,79 @@
     <meta charset="UTF-8" />
     <title>Ahmed Ryan</title>
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/education.css" />
+    <link rel="stylesheet" href="/css/experience.css" />
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
   </head>
   <body>
     <!-- Content of your website -->
-    <div class="main-body">
-      <section class="navbar">
-        <nav>
-          <div class="navbar-brand">Ahmed Ryan.</div>
-          <ul>
-            <li>Experiences</li>
-            <li>Projects</li>
-          </ul>
-        </nav>
-      </section>
-      <div class="intro">
-        <section class="short-intro">Short Intro</section>
-        <section class="long-intro">
-          <h1>Biography</h1>
-          <p>
-            Ahmed Ryan is a software engineer with 2+ years of professional
-            experience. He specializes in C# and .NET, consistently seeking to
-            expand his knowledge and expertise in the field. Ahmed is passionate
-            about technology and enjoys discussing these topics at length.
-            Additionally, he has a keen interest in World History. In his
-            pursuit of continuous learning, Ahmed dedicates time to exploring
-            new technologies and methodologies. His commitment to mastering the
-            subjects he loves drives his career and personal growth. For those
-            looking to engage in meaningful conversations or seeking insights on
-            software development and historical topics, Ahmed is a great person
-            to consult.
-          </p>
-          <div class="row">
-            <div class="interests">
-              <h2>Interests</h2>
-              <div>
-                <ul>
-                  <li>Software Engineering</li>
-                  <li>Computational Linguistics</li>
-                  <li>Cyber Security</li>
-                  <li>Machine Learning</li>
-                </ul>
-              </div>
-            </div>
-            <div class="education">
-              <h2>Education</h2>
-              <div>
-                <ul>
-                  <li class="row">
-                    <svg
-                      class="icon"
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 24 24"
-                      width="30px"
-                      height="30px"
-                    >
-                      <path
-                        fill="none"
-                        stroke="currentcolor"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        stroke-width="1.5"
-                        d="M4.26 10.147a60.436 60.436.0 00-.491 6.347A48.627 48.627.0 0112 20.904a48.627 48.627.0 018.232-4.41 60.46 60.46.0 00-.491-6.347m-15.482.0a50.57 50.57.0 00-2.658-.813A59.905 59.905.0 0112 3.493a59.902 59.902.0 0110.399 5.84 51.39 51.39.0 00-2.658.814m-15.482.0A50.697 50.697.0 0112 13.489a50.702 50.702.0 017.74-3.342M6.75 15a.75.75.0 100-1.5.75.75.0 000 1.5m0 0v-3.675A55.378 55.378.0 0112 8.443m-7.007 11.55A5.981 5.981.0 006.75 15.75v-1.5"
-                      ></path>
-                    </svg>
-                    <div class="col">
-                      <div class="course">
-                        B.Sc. in Software Engineering | 2022
-                      </div>
-                      <div class="institution">IIT, University of Dhaka</div>
-                    </div>
-                  </li>
-                </ul>
-                <ul>
-                  <li class="row">
-                    <svg
-                      class="icon"
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 24 24"
-                      width="30px"
-                      height="30px"
-                    >
-                      <path
-                        fill="none"
-                        stroke="currentcolor"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        stroke-width="1.5"
-                        d="M4.26 10.147a60.436 60.436.0 00-.491 6.347A48.627 48.627.0 0112 20.904a48.627 48.627.0 018.232-4.41 60.46 60.46.0 00-.491-6.347m-15.482.0a50.57 50.57.0 00-2.658-.813A59.905 59.905.0 0112 3.493a59.902 59.902.0 0110.399 5.84 51.39 51.39.0 00-2.658.814m-15.482.0A50.697 50.697.0 0112 13.489a50.702 50.702.0 017.74-3.342M6.75 15a.75.75.0 100-1.5.75.75.0 000 1.5m0 0v-3.675A55.378 55.378.0 0112 8.443m-7.007 11.55A5.981 5.981.0 006.75 15.75v-1.5"
-                      ></path>
-                    </svg>
-                    <div class="col">
-                      <div class="course">
-                        Higher Secondary Certificate | 2017
-                      </div>
-                      <div class="institution">Notre Dame College, Dhaka</div>
-                    </div>
-                  </li>
-                </ul>
-                <ul>
-                  <li class="row">
-                    <svg
-                      class="icon"
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 24 24"
-                      width="30px"
-                      height="30px"
-                    >
-                      <path
-                        fill="none"
-                        stroke="currentcolor"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        stroke-width="1.5"
-                        d="M4.26 10.147a60.436 60.436.0 00-.491 6.347A48.627 48.627.0 0112 20.904a48.627 48.627.0 018.232-4.41 60.46 60.46.0 00-.491-6.347m-15.482.0a50.57 50.57.0 00-2.658-.813A59.905 59.905.0 0112 3.493a59.902 59.902.0 0110.399 5.84 51.39 51.39.0 00-2.658.814m-15.482.0A50.697 50.697.0 0112 13.489a50.702 50.702.0 017.74-3.342M6.75 15a.75.75.0 100-1.5.75.75.0 000 1.5m0 0v-3.675A55.378 55.378.0 0112 8.443m-7.007 11.55A5.981 5.981.0 006.75 15.75v-1.5"
-                      ></path>
-                    </svg>
-                    <div class="col">
-                      <div class="course">
-                        Secondary School Certificate | 2015
-                      </div>
-                      <div class="institution">
-                        Military Collegiate School Khulna
-                      </div>
-                    </div>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </section>
+    <nav>
+      <p id="nav-title">Ahmed Ryan</p>
+      <ul>
+        <li>
+          <a href="#" onclick="loadContent('/html/education.html')"
+            >Education</a
+          >
+        </li>
+        <li>
+          <a href="#" onclick="loadContent('/html/experience.html')"
+            >Experience</a
+          >
+        </li>
+        <li>
+          <a href="#" onclick="loadContent('/html/project.html')">Projects</a>
+        </li>
+        <li>
+          <a href="#" onclick="loadContent('/html/skill.html')">Skills</a>
+        </li>
+      </ul>
+    </nav>
+
+    <main>
+      <div id="side-bar">
+        <img id="profile-img" src="/assets/images/ryan.jpg" alt="" />
+        <p id="profile-name">Ahmed Ryan</p>
+        <p id="profession">Software Engineer</p>
+
+        <a class="profile-link" href="">
+          <i class="fas fa-briefcase profile-icon"> </i>
+          <p>Cefalo Bangladesh Ltd.</p>
+        </a>
+
+        <a class="profile-link" href="">
+          <i class="fas fa-envelope profile-icon"> </i>
+          <p>Email</p>
+        </a>
+
+        <a class="profile-link" href="">
+          <i class="fa-brands fa-github profile-icon"> </i>
+          <p>GitHub</p>
+        </a>
+
+        <a class="profile-link" href="">
+          <i class="fa-brands fa-linkedin profile-icon"> </i>
+          <p>LinkedIn</p>
+        </a>
+
+        <!-- This adds a job/briefcase icon -->
       </div>
-    </div>
+
+      <div id="main-body">
+        <div>Intro</div>
+        <div>Research Interest Areas</div>
+        <ul>
+          <li>Malware Analysis and Detection Techniques</li>
+          <li>Reverse Engineering of Software and Binary Applications</li>
+          <li>Binary Analysis and Exploitation</li>
+          <li>Vulnerability Research and Exploit Development</li>
+          <li>Low-Level System Security and Threat Intelligence</li>
+        </ul>
+      </div>
+    </main>
 
     <!-- javascript imports -->
     <script src="js/script.js"></script>
