feature: skills section updated;

--- a/html/experience.html
+++ b/html/experience.html
@@ -1,144 +1,144 @@
 <div>
   <div class="experience-title">Industry Experience</div>
 
-  <section>
-    <div class="experience-designation">
-      <!-- <i class="fa-solid fa-graduation-cap"></i> -->
-      Software Engineer
-    </div>
+  <ul>
+    <li>
+      <div class="experience-designation">
+        <!-- <i class="fa-solid fa-graduation-cap"></i> -->
+        Software Engineer
+      </div>
 
-    <div class="experience-place">
-      <!-- <i class="fa-solid fa-location-dot"></i> -->
-      <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-      Cefalo Bangladesh Ltd. | July 2024 - Present
-    </div>
+      <div class="experience-place">
+        <!-- <i class="fa-solid fa-location-dot"></i> -->
+        <!-- <i class="fa-solid fa-map-location-dot"></i> -->
+        Cefalo Bangladesh Ltd. | July 2024 - Present
+      </div>
 
-    <div class="experience-details">
-      <p>Technical Skills</p>
-      <ul>
-        <li>CSE 211: Computer Organization</li>
-        <li>CSE 311: Computer Networking</li>
-      </ul>
-    </div>
+      <div class="experience-details">
+        <p>ASP.NET MVC - Vue.js - CSS - SignalR</p>
+      </div>
 
-    <div class="experience-details">
-      <p>Details</p>
-      <ul>
-        <li>CSE 211: Computer Organization</li>
-        <li>CSE 311: Computer Networking</li>
-      </ul>
-    </div>
-  </section>
+      <div class="experience-details">
+        <ul>
+          <li>
+            Developing a Hotel, Restaurant, and Canteen Management System for
+            Plorea using web technologies to digitize services and deliver a
+            modern, user-friendly interface.
+          </li>
+        </ul>
+      </div>
+    </li>
 
-  <section>
-    <div class="experience-designation">
-      <!-- <i class="fa-solid fa-graduation-cap"></i> -->
-      Associate Software Engineer
-    </div>
+    <li>
+      <div class="experience-designation">
+        <!-- <i class="fa-solid fa-graduation-cap"></i> -->
+        Associate Software Engineer
+      </div>
 
-    <div class="experience-place">
-      <!-- <i class="fa-solid fa-location-dot"></i> -->
-      <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-      Cefalo Bangladesh Ltd. | Jan 2023 - June 2024
-    </div>
+      <div class="experience-place">
+        <!-- <i class="fa-solid fa-location-dot"></i> -->
+        <!-- <i class="fa-solid fa-map-location-dot"></i> -->
+        Cefalo Bangladesh Ltd. | Jan 2023 - June 2024
+      </div>
 
-    <div class="experience-details">
-      <p>Technical Skills</p>
-      <ul>
-        <li>CSE 211: Computer Organization</li>
-        <li>CSE 311: Computer Networking</li>
-      </ul>
-    </div>
+      <div class="experience-details">
+        <p>
+          C# - ASP.NET Core - EF Core - MSSQL - HTML - JavaScript - React.js
+        </p>
+      </div>
 
-    <div class="experience-details">
-      <p>Details</p>
-      <ul>
-        <li>CSE 211: Computer Organization</li>
-        <li>CSE 311: Computer Networking</li>
-      </ul>
-    </div>
-  </section>
+      <div class="experience-details">
+        <ul>
+          <li>
+            Worked for a year on an in-house HR Portal Application, where I
+            integrated biometric devices, migrated user data from legacy devices
+            to new ones, and implemented several features such as remote work
+            application functionality and employee team history tracking.
+          </li>
+        </ul>
+      </div>
+    </li>
 
-  <section>
-    <div class="experience-designation">
-      <!-- <i class="fa-solid fa-graduation-cap"></i> -->
-      Trainee Software Engineer
-    </div>
+    <li>
+      <div class="experience-designation">
+        <!-- <i class="fa-solid fa-graduation-cap"></i> -->
+        Trainee Software Engineer
+      </div>
 
-    <div class="experience-place">
-      <!-- <i class="fa-solid fa-location-dot"></i> -->
-      <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-      Cefalo Bangladesh Ltd. | Jan 2022 - Dec 2022
-    </div>
+      <div class="experience-place">
+        <!-- <i class="fa-solid fa-location-dot"></i> -->
+        <!-- <i class="fa-solid fa-map-location-dot"></i> -->
+        Cefalo Bangladesh Ltd. | Jan 2022 - Dec 2022
+      </div>
 
-    <div class="experience-details">
-      <p>Technical Skills</p>
-      <ul>
-        <li>CSE 211: Computer Organization</li>
-        <li>CSE 311: Computer Networking</li>
-      </ul>
-    </div>
+      <div class="experience-details">
+        <p>
+          C# - ASP.NET Core - EF Core - MSSQL - HTML - JavaScript - React.js
+        </p>
+      </div>
 
-    <div class="experience-details">
-      <p>Details</p>
-      <ul>
-        <li>CSE 211: Computer Organization</li>
-        <li>CSE 311: Computer Networking</li>
-      </ul>
-    </div>
-  </section>
+      <div class="experience-details">
+        <ul>
+          <li>
+            Developed a blog publishing client and server application as part of
+            a training program, gaining hands-on experience with Internet
+            protocols, HTTP, Cross-Origin Resource Sharing (CORS), REST APIs,
+            and Linux systems.
+          </li>
+        </ul>
+      </div>
+    </li>
 
-  <section>
-    <div class="experience-designation">
-      <!-- <i class="fa-solid fa-graduation-cap"></i> -->
-      Technical Writer
-    </div>
+    <li>
+      <div class="experience-designation">
+        <!-- <i class="fa-solid fa-graduation-cap"></i> -->
+        Technical Writer
+      </div>
 
-    <div class="experience-place">
-      <!-- <i class="fa-solid fa-location-dot"></i> -->
-      <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-      Code Maze | May 2023 - Oct 2023
-    </div>
+      <div class="experience-place">
+        <!-- <i class="fa-solid fa-location-dot"></i> -->
+        <!-- <i class="fa-solid fa-map-location-dot"></i> -->
+        Code Maze | May 2023 - Oct 2023
+      </div>
 
-    <div class="experience-details">
-      <p>Technical Skills</p>
-      <ul>
-        <li>CSE 211: Computer Organization</li>
-        <li>CSE 311: Computer Networking</li>
-      </ul>
-    </div>
+      <div class="experience-details">
+        <p>Technical Writing - C# - .NET</p>
+      </div>
 
-    <div class="experience-details">
-      <p>Details</p>
-      <ul>
-        <li>CSE 211: Computer Organization</li>
-        <li>CSE 311: Computer Networking</li>
-      </ul>
-    </div>
-  </section>
+      <div class="experience-details">
+        <ul>
+          <li>CSE 211: Computer Organization</li>
+          <li>CSE 311: Computer Networking</li>
+        </ul>
+      </div>
+    </li>
+  </ul>
+
+  <br />
 
   <div class="experience-title">Research Experience</div>
 
-  <section>
-    <div class="experience-designation">
-      <!-- <i class="fa-solid fa-graduation-cap"></i> -->
-      Research Associate
-    </div>
+  <ul>
+    <li>
+      <div class="experience-designation">
+        <!-- <i class="fa-solid fa-graduation-cap"></i> -->
+        Research Associate
+      </div>
 
-    <div class="experience-place">
-      <!-- <i class="fa-solid fa-location-dot"></i> -->
-      <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-      Intelligent Systems and HCI Research Group | June 2024 - Present
-    </div>
+      <div class="experience-place">
+        <!-- <i class="fa-solid fa-location-dot"></i> -->
+        <!-- <i class="fa-solid fa-map-location-dot"></i> -->
+        Intelligent Systems and HCI Research Group | June 2024 - Present
+      </div>
 
-    <div class="experience-details">
-      <p>Details</p>
-      <ul>
-        <li>
-          Currently working on "Automated Community Smell Detection Using
-          In-Context Learning Capabilities of GPT"
-        </li>
-      </ul>
-    </div>
-  </section>
+      <div class="experience-details">
+        <ul>
+          <li>
+            Currently working on "Automated Community Smell Detection Using
+            In-Context Learning Capabilities of GPT"
+          </li>
+        </ul>
+      </div>
+    </li>
+  </ul>
 </div>
