--- a/html/project.html
+++ b/html/project.html
@@ -1,1 +1,8 @@
-<div>Project</div>
+<div>
+  <div>
+    This page showcases key projects and assignments, serving as a reflection of
+    both my academic journey and personal learning experiences.
+  </div>
+
+  <div>Project Directory</div>
+</div>
