--- a/html/skill.html
+++ b/html/skill.html
@@ -1,1 +1,195 @@
-<div>Skill</div>
+<div>
+  <h1 class="skill-title">Technical Skills</h1>
+  <ul>
+    <li class="skill-icons">
+      <div class="skill-subtitle">Programming Languages</div>
+      <div>
+        <img
+          src="https://img.shields.io/badge/C%23-%23239120.svg?style=flat-square&logo=c-sharp&logoColor=white"
+          alt="c#"
+        />
+        <img
+          src="https://img.shields.io/badge/Java-ED8B00?style=flat-square&logo=java&logoColor=white"
+          alt="java"
+        />
+        <img
+          src="https://img.shields.io/badge/Python-3776AB?style=flat-square&logo=python&logoColor=white"
+          alt="python"
+        />
+        <img
+          src="https://img.shields.io/badge/-JavaScript-black?style=flat-square&logo=javascript"
+          alt="javascript"
+        />
+        <img
+          src="https://img.shields.io/badge/-C++-00599C?style=flat-square&logo=c"
+          alt="c++"
+        />
+        <img
+          src="https://img.shields.io/badge/-TypeScript-%23007ACC.svg?style=flat-square&logo=typescript&logoColor=white"
+          alt="typescript"
+        />
+        <img
+          src="https://img.shields.io/badge/-HTML5-E34F26?style=flat-square&logo=html5&logoColor=white"
+          alt="html5"
+        />
+        <img
+          src="https://img.shields.io/badge/-CSS3-1572B6?style=flat-square&logo=css3"
+          alt="css"
+        />
+      </div>
+    </li>
+    <li class="skill-icons">
+      <div class="skill-subtitle">Frameworks & Technologies</div>
+      <div>
+        <img
+          src="https://img.shields.io/badge/.NET-5C2D91?style=flat-square&logo=.net&logoColor=white"
+          alt=".net"
+        />
+        <img
+          src="https://img.shields.io/badge/-Nodejs-black?style=flat-square&logo=Node.js"
+          alt="nodejs"
+        />
+        <img
+          src="https://img.shields.io/badge/-React-black?style=flat-square&logo=react"
+          alt="react"
+        />
+        <img
+          src="https://img.shields.io/badge/-Vue.js-4fc08d?style=flat&logo=vuedotjs&logoColor=white"
+          alt="vue"
+        />
+        <img
+          src="https://img.shields.io/badge/-Bootstrap-563D7C?style=flat-square&logo=bootstrap"
+          alt="bootstrap"
+        />
+      </div>
+    </li>
+
+    <li class="skill-icons">
+      <div class="skill-subtitle">Tools & Platforms</div>
+      <div>
+        <img
+          src="https://img.shields.io/badge/Linux-FCC624?style=flat-square&logo=linux&logoColor=black"
+          alt="linux"
+        />
+        <img
+          src="https://img.shields.io/badge/Windows-0078D6?style=flat-square&logo=windows&logoColor=white"
+          alt="windows"
+        />
+        <img
+          src="https://img.shields.io/badge/-Git-black?style=flat-square&logo=git"
+          alt="git"
+        />
+        <img
+          src="https://img.shields.io/badge/-GitHub-181717?style=flat-square&logo=github"
+          alt="github"
+        />
+        <img
+          src="https://img.shields.io/badge/-BitBucket-darkblue?style=flat-square&logo=bitbucket"
+          alt="bitbucket"
+        />
+        <img
+          src="https://img.shields.io/badge/Microsoft%20SQL%20Server-CC2927?style=flat-square&logo=microsoft%20sql%20server&logoColor=white"
+          alt="mssql"
+        />
+        <img
+          src="https://img.shields.io/badge/-MongoDB-black?style=flat-square&logo=mongodb"
+          alt="mongodb"
+        />
+        <img
+          src="https://img.shields.io/badge/-MySQL-black?style=flat-square&logo=mysql"
+          alt="mysql"
+        />
+      </div>
+    </li>
+  </ul>
+
+  <br />
+
+  <div class="skill-title">Certifications</div>
+  <ul>
+    <li>
+      <div class="skill-heading">Complete Beginner</div>
+      <div class="skill-organization">Issued by TryHackMe | Sept, 2024</div>
+      <div class="skill-subheading">
+        <p>Skills</p>
+        <p>|</p>
+        <p>
+          Kali Linux - Nmap - OWASP - Burp Suite - John the Ripper - Metasploit
+        </p>
+      </div>
+    </li>
+    <li>
+      <div class="skill-heading">Introduction to Cyber Security</div>
+      <div class="skill-organization">Issued by TryHackMe | Sept, 2024</div>
+      <div class="skill-subheading">
+        <p>Skills</p>
+        <p>|</p>
+        <p>
+          Digital Forensics - Security Operations - Web Application Security -
+          Network Security
+        </p>
+      </div>
+    </li>
+    <li>
+      <div class="skill-heading">Pre Security</div>
+      <div class="skill-organization">Issued by TryHackMe | Sept, 2024</div>
+      <div class="skill-subheading">
+        <p>Skills</p>
+        <p>|</p>
+        <p>Linux - Windows - Hypertext Transfer Protocol (HTTP) - OSI Model</p>
+      </div>
+    </li>
+    <li>
+      <div class="skill-heading">Responsive Web Design</div>
+      <div class="skill-organization">Issued by FreeCodeCamp | Sept, 2024</div>
+      <div class="skill-subheading">
+        <p>Skills</p>
+        <p>|</p>
+        <p>HTML5 - Cascading Style Sheets (CSS) - Responsive Web Design</p>
+      </div>
+    </li>
+    <li>
+      <div class="skill-heading">Foundational C# With Microsoft</div>
+      <div class="skill-organization">Issued by FreeCodeCamp | Sept, 2024</div>
+      <div class="skill-subheading">
+        <p>Skills</p>
+        <p>|</p>
+        <p>C#</p>
+      </div>
+    </li>
+  </ul>
+
+  <br />
+
+  <div class="skill-title">Competitions</div>
+  <ul>
+    <li>
+      <div class="skill-heading">
+        National Cyber Drill By BGD e-Gov CIRT | 2020
+      </div>
+      <div class="skill-organization">Capture the Flag (CTF) Competition</div>
+      <div class="skill-subheading">
+        <p>
+          Secured a spot in the Top 20 among 234 teams from banks,
+          organizations, and universities in a national cyber drill.
+        </p>
+      </div>
+    </li>
+  </ul>
+
+  <br />
+
+  <div class="skill-title">Test Scores</div>
+  <ul>
+    <li>
+      <div class="skill-heading">IELTS</div>
+      <div class="skill-organization">IELTS Academic | 1st Sep, 2024</div>
+      <div class="skill-subheading">
+        <p>
+          Overall - 8.0 ( Listening - 7.5 | Reading - 9.0 | Writing - 7.5 |
+          Speaking - 7.0 )
+        </p>
+      </div>
+    </li>
+  </ul>
+</div>
