--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/education.css" />
     <link rel="stylesheet" href="/css/experience.css" />
+    <link rel="stylesheet" href="/css/project.css" />
+    <link rel="stylesheet" href="/css/skill.css" />
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
     />
   </head>
   <body>
@@ -38,9 +44,11 @@
 
     <main>
       <div id="side-bar">
-        <img id="profile-img" src="/assets/images/ryan.jpg" alt="" />
-        <p id="profile-name">Ahmed Ryan</p>
-        <p id="profession">Software Engineer</p>
+        <div id="profile">
+          <img id="profile-img" src="/assets/images/ryan.jpg" alt="" />
+          <p id="profile-name">Ahmed Ryan</p>
+          <p id="profession">Software Engineer</p>
+        </div>
 
         <a class="profile-link" href="">
           <i class="fas fa-briefcase profile-icon"> </i>
@@ -78,6 +86,7 @@
       </div>
     </main>
 
+    <footer class="footer"><p>Ahmed Ryan © 2024</p></footer>
     <!-- javascript imports -->
     <script src="js/script.js"></script>
   </body>
