feature: project section in progress;

--- a/html/project.html
+++ b/html/project.html
@@ -1,8 +1,59 @@
 <div>
+  <div class="project-title">Directory</div>
   <div>
-    This page showcases key projects and assignments, serving as a reflection of
-    both my academic journey and personal learning experiences.
+    <ul>
+      <li>
+        Tool Implementation and Research Project
+        <ul>
+          <li>Botest</li>
+          <li>Abstract Syntax Tree</li>
+          <li>Goal-Question-Metric Framework Project</li>
+        </ul>
+      </li>
+      <li>
+        AI/ML Projects
+        <ul>
+          Gomoku Game with AI Opponent
+        </ul>
+        <ul>
+          Wumpus World with AI Opponent
+        </ul>
+        <ul>
+          Glass Identification using K-NN and K-Means Algorithms
+        </ul>
+        <ul>
+          Skin Detection using Naive Bayes Algorithm
+        </ul>
+        <ul>
+          Leaf Prediction using KNN
+        </ul>
+        <ul>
+          Image Pixel Clustering using K-Means Algorithm
+        </ul>
+        <ul>
+          K-D Tree Implementation
+        </ul>
+        <ul>
+          Anova Test
+        </ul>
+      </li>
+      <li>
+        Development Projects
+        <ul>
+          <li>Udemy Web UI</li>
+          <li>News Stories Web UI</li>
+          <li>News Stories API</li>
+          <li>Ride Sharing System</li>
+          <li>Calculator API</li>
+          <li>IIT-360 Mobile Application</li>
+          <li>IIT-360 API</li>
+          <li>Point of Sale UI</li>
+          <li>Point of Sale API</li>
+          <li>Shape Drawing Desktop Application</li>
+          <li>Text Convertion Desktop Application</li>
+          <li>Authentication Web Application</li>
+        </ul>
+      </li>
+    </ul>
   </div>
-
-  <div>Project Directory</div>
 </div>
