--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </div>
 
       <div id="main-body">
-        <div>Intro</div>
+        <!-- <div>Intro</div>
         <div>Research Interest Areas</div>
         <ul>
           <li>Malware Analysis and Detection Techniques</li>
@@ -82,7 +82,7 @@
           <li>Binary Analysis and Exploitation</li>
           <li>Vulnerability Research and Exploit Development</li>
           <li>Low-Level System Security and Threat Intelligence</li>
-        </ul>
+        </ul> -->
       </div>
     </main>
 
