feature: projects being added;

--- a/html/experience.html
+++ b/html/experience.html
@@ -107,8 +107,12 @@
 
       <div class="experience-details">
         <ul>
-          <li>CSE 211: Computer Organization</li>
-          <li>CSE 311: Computer Networking</li>
+          <li>
+            Gained valuable experience in breaking down complex technical
+            concepts into clear, concise content, honing skills in technical
+            writing, content structuring, and effectively communicating coding
+            practices to an audience of around 1 million readers.
+          </li>
         </ul>
       </div>
     </li>
