--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body id="body">
     <!-- Content of your website -->
     <nav>
       <p id="nav-title">Ahmed Ryan</p>
@@ -38,6 +38,10 @@
         </li>
         <li>
           <a href="#" onclick="loadContent('/html/skill.html')">Skills</a>
+        </li>
+        </li>
+        <li>
+          <a href="#" onclick="loadContent('/html/extracurricular.html')">Extracurriculars</a>
         </li>
       </ul>
     </nav>
@@ -86,7 +90,8 @@
       </div>
     </main>
 
-    <footer class="footer"><p>Ahmed Ryan © 2024</p></footer>
+    <!-- <footer id="footer" class="footer"><p>Ahmed Ryan © 2024</p></footer> -->
+
     <!-- javascript imports -->
     <script src="js/script.js"></script>
   </body>
