feature: projects updated;

--- a/html/project.html
+++ b/html/project.html
@@ -236,17 +236,11 @@
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
-        <span> Goal-Question-Metric Framework Project </span>
+        <span> 7 </span>
       </div>
       <div class="project-description">
         <strong>Description: </strong>
-        <span>
-          This research paper will focus on identifying community smells in
-          large-scale software companies or environments by leveraging GPT's
-          in-context learning capabilities. Our goal is to eventually develop
-          this into a tool called the "Community Smell Detector." The work is
-          currently in progress, and additional details will be provided soon.
-        </span>
+        <span> </span>
       </div>
       <div class="project-tool">
         <strong>Tools: </strong>
@@ -261,17 +255,11 @@
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
-        <span> Goal-Question-Metric Framework Project </span>
+        <span> 8 </span>
       </div>
       <div class="project-description">
         <strong>Description: </strong>
-        <span>
-          This research paper will focus on identifying community smells in
-          large-scale software companies or environments by leveraging GPT's
-          in-context learning capabilities. Our goal is to eventually develop
-          this into a tool called the "Community Smell Detector." The work is
-          currently in progress, and additional details will be provided soon.
-        </span>
+        <span> </span>
       </div>
       <div class="project-tool">
         <strong>Tools: </strong>
@@ -286,17 +274,11 @@
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
-        <span> Goal-Question-Metric Framework Project </span>
+        <span> 9 </span>
       </div>
       <div class="project-description">
         <strong>Description: </strong>
-        <span>
-          This research paper will focus on identifying community smells in
-          large-scale software companies or environments by leveraging GPT's
-          in-context learning capabilities. Our goal is to eventually develop
-          this into a tool called the "Community Smell Detector." The work is
-          currently in progress, and additional details will be provided soon.
-        </span>
+        <span> </span>
       </div>
       <div class="project-tool">
         <strong>Tools: </strong>
@@ -311,17 +293,11 @@
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
-        <span> Goal-Question-Metric Framework Project </span>
+        <span> 10 </span>
       </div>
       <div class="project-description">
         <strong>Description: </strong>
-        <span>
-          This research paper will focus on identifying community smells in
-          large-scale software companies or environments by leveraging GPT's
-          in-context learning capabilities. Our goal is to eventually develop
-          this into a tool called the "Community Smell Detector." The work is
-          currently in progress, and additional details will be provided soon.
-        </span>
+        <span> </span>
       </div>
       <div class="project-tool">
         <strong>Tools: </strong>
@@ -336,17 +312,11 @@
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
-        <span> Goal-Question-Metric Framework Project </span>
+        <span> 11 </span>
       </div>
       <div class="project-description">
         <strong>Description: </strong>
-        <span>
-          This research paper will focus on identifying community smells in
-          large-scale software companies or environments by leveraging GPT's
-          in-context learning capabilities. Our goal is to eventually develop
-          this into a tool called the "Community Smell Detector." The work is
-          currently in progress, and additional details will be provided soon.
-        </span>
+        <span> </span>
       </div>
       <div class="project-tool">
         <strong>Tools: </strong>
@@ -361,17 +331,11 @@
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
-        <span> Goal-Question-Metric Framework Project </span>
+        <span> 12 </span>
       </div>
       <div class="project-description">
         <strong>Description: </strong>
-        <span>
-          This research paper will focus on identifying community smells in
-          large-scale software companies or environments by leveraging GPT's
-          in-context learning capabilities. Our goal is to eventually develop
-          this into a tool called the "Community Smell Detector." The work is
-          currently in progress, and additional details will be provided soon.
-        </span>
+        <span> </span>
       </div>
       <div class="project-tool">
         <strong>Tools: </strong>
@@ -386,17 +350,11 @@
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
-        <span> Goal-Question-Metric Framework Project </span>
+        <span> 13 </span>
       </div>
       <div class="project-description">
         <strong>Description: </strong>
-        <span>
-          This research paper will focus on identifying community smells in
-          large-scale software companies or environments by leveraging GPT's
-          in-context learning capabilities. Our goal is to eventually develop
-          this into a tool called the "Community Smell Detector." The work is
-          currently in progress, and additional details will be provided soon.
-        </span>
+        <span> </span>
       </div>
       <div class="project-tool">
         <strong>Tools: </strong>
@@ -411,17 +369,11 @@
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
-        <span> Goal-Question-Metric Framework Project </span>
+        <span> 14 </span>
       </div>
       <div class="project-description">
         <strong>Description: </strong>
-        <span>
-          This research paper will focus on identifying community smells in
-          large-scale software companies or environments by leveraging GPT's
-          in-context learning capabilities. Our goal is to eventually develop
-          this into a tool called the "Community Smell Detector." The work is
-          currently in progress, and additional details will be provided soon.
-        </span>
+        <span> </span>
       </div>
       <div class="project-tool">
         <strong>Tools: </strong>
@@ -436,17 +388,11 @@
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
-        <span> Goal-Question-Metric Framework Project </span>
+        <span> 15 </span>
       </div>
       <div class="project-description">
         <strong>Description: </strong>
-        <span>
-          This research paper will focus on identifying community smells in
-          large-scale software companies or environments by leveraging GPT's
-          in-context learning capabilities. Our goal is to eventually develop
-          this into a tool called the "Community Smell Detector." The work is
-          currently in progress, and additional details will be provided soon.
-        </span>
+        <span> </span>
       </div>
       <div class="project-tool">
         <strong>Tools: </strong>
@@ -461,17 +407,11 @@
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
-        <span> Goal-Question-Metric Framework Project </span>
+        <span> 16 </span>
       </div>
       <div class="project-description">
         <strong>Description: </strong>
-        <span>
-          This research paper will focus on identifying community smells in
-          large-scale software companies or environments by leveraging GPT's
-          in-context learning capabilities. Our goal is to eventually develop
-          this into a tool called the "Community Smell Detector." The work is
-          currently in progress, and additional details will be provided soon.
-        </span>
+        <span> </span>
       </div>
       <div class="project-tool">
         <strong>Tools: </strong>
@@ -486,17 +426,11 @@
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
-        <span> Goal-Question-Metric Framework Project </span>
+        <span> 17 </span>
       </div>
       <div class="project-description">
         <strong>Description: </strong>
-        <span>
-          This research paper will focus on identifying community smells in
-          large-scale software companies or environments by leveraging GPT's
-          in-context learning capabilities. Our goal is to eventually develop
-          this into a tool called the "Community Smell Detector." The work is
-          currently in progress, and additional details will be provided soon.
-        </span>
+        <span> </span>
       </div>
       <div class="project-tool">
         <strong>Tools: </strong>
@@ -511,17 +445,11 @@
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
-        <span> Goal-Question-Metric Framework Project </span>
+        <span> 18 </span>
       </div>
       <div class="project-description">
         <strong>Description: </strong>
-        <span>
-          This research paper will focus on identifying community smells in
-          large-scale software companies or environments by leveraging GPT's
-          in-context learning capabilities. Our goal is to eventually develop
-          this into a tool called the "Community Smell Detector." The work is
-          currently in progress, and additional details will be provided soon.
-        </span>
+        <span> </span>
       </div>
       <div class="project-tool">
         <strong>Tools: </strong>
@@ -536,17 +464,11 @@
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
-        <span> Goal-Question-Metric Framework Project </span>
+        <span> 19 </span>
       </div>
       <div class="project-description">
         <strong>Description: </strong>
-        <span>
-          This research paper will focus on identifying community smells in
-          large-scale software companies or environments by leveraging GPT's
-          in-context learning capabilities. Our goal is to eventually develop
-          this into a tool called the "Community Smell Detector." The work is
-          currently in progress, and additional details will be provided soon.
-        </span>
+        <span> </span>
       </div>
       <div class="project-tool">
         <strong>Tools: </strong>
@@ -561,17 +483,11 @@
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
-        <span> Goal-Question-Metric Framework Project </span>
+        <span> 20 </span>
       </div>
       <div class="project-description">
         <strong>Description: </strong>
-        <span>
-          This research paper will focus on identifying community smells in
-          large-scale software companies or environments by leveraging GPT's
-          in-context learning capabilities. Our goal is to eventually develop
-          this into a tool called the "Community Smell Detector." The work is
-          currently in progress, and additional details will be provided soon.
-        </span>
+        <span> </span>
       </div>
       <div class="project-tool">
         <strong>Tools: </strong>
@@ -586,17 +502,11 @@
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
-        <span> Goal-Question-Metric Framework Project </span>
+        <span> 21 </span>
       </div>
       <div class="project-description">
         <strong>Description: </strong>
-        <span>
-          This research paper will focus on identifying community smells in
-          large-scale software companies or environments by leveraging GPT's
-          in-context learning capabilities. Our goal is to eventually develop
-          this into a tool called the "Community Smell Detector." The work is
-          currently in progress, and additional details will be provided soon.
-        </span>
+        <span> </span>
       </div>
       <div class="project-tool">
         <strong>Tools: </strong>
@@ -611,17 +521,11 @@
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
-        <span> Goal-Question-Metric Framework Project </span>
+        <span> 22 </span>
       </div>
       <div class="project-description">
         <strong>Description: </strong>
-        <span>
-          This research paper will focus on identifying community smells in
-          large-scale software companies or environments by leveraging GPT's
-          in-context learning capabilities. Our goal is to eventually develop
-          this into a tool called the "Community Smell Detector." The work is
-          currently in progress, and additional details will be provided soon.
-        </span>
+        <span> </span>
       </div>
       <div class="project-tool">
         <strong>Tools: </strong>
@@ -636,17 +540,11 @@
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
-        <span> Goal-Question-Metric Framework Project </span>
+        <span> 23 </span>
       </div>
       <div class="project-description">
         <strong>Description: </strong>
-        <span>
-          This research paper will focus on identifying community smells in
-          large-scale software companies or environments by leveraging GPT's
-          in-context learning capabilities. Our goal is to eventually develop
-          this into a tool called the "Community Smell Detector." The work is
-          currently in progress, and additional details will be provided soon.
-        </span>
+        <span> </span>
       </div>
       <div class="project-tool">
         <strong>Tools: </strong>
@@ -661,17 +559,11 @@
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
-        <span> Goal-Question-Metric Framework Project </span>
+        <span> 24 </span>
       </div>
       <div class="project-description">
         <strong>Description: </strong>
-        <span>
-          This research paper will focus on identifying community smells in
-          large-scale software companies or environments by leveraging GPT's
-          in-context learning capabilities. Our goal is to eventually develop
-          this into a tool called the "Community Smell Detector." The work is
-          currently in progress, and additional details will be provided soon.
-        </span>
+        <span> </span>
       </div>
       <div class="project-tool">
         <strong>Tools: </strong>
@@ -686,17 +578,11 @@
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
-        <span> Goal-Question-Metric Framework Project </span>
+        <span> 25 </span>
       </div>
       <div class="project-description">
         <strong>Description: </strong>
-        <span>
-          This research paper will focus on identifying community smells in
-          large-scale software companies or environments by leveraging GPT's
-          in-context learning capabilities. Our goal is to eventually develop
-          this into a tool called the "Community Smell Detector." The work is
-          currently in progress, and additional details will be provided soon.
-        </span>
+        <span> </span>
       </div>
       <div class="project-tool">
         <strong>Tools: </strong>
@@ -711,17 +597,11 @@
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
-        <span> Goal-Question-Metric Framework Project </span>
+        <span> 26 </span>
       </div>
       <div class="project-description">
         <strong>Description: </strong>
-        <span>
-          This research paper will focus on identifying community smells in
-          large-scale software companies or environments by leveraging GPT's
-          in-context learning capabilities. Our goal is to eventually develop
-          this into a tool called the "Community Smell Detector." The work is
-          currently in progress, and additional details will be provided soon.
-        </span>
+        <span> </span>
       </div>
       <div class="project-tool">
         <strong>Tools: </strong>
