feature: projects updated;

--- a/html/project.html
+++ b/html/project.html
@@ -50,9 +50,10 @@
   <br />
   <br />
 
-  <div class="project-title">Tool Implementation & Research Projects</div>
-
   <div class="all-project-container">
+    <!-- Tool Section -->
+    <div class="project-title">Tool Implementation & Research Projects</div>
+
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
@@ -176,6 +177,7 @@
       </div>
     </div>
 
+    <!-- AI / ML Section -->
     <div class="project-title">AI/ML Projects</div>
 
     <div class="project-container">
@@ -236,7 +238,7 @@
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
-        <span> 7 </span>
+        <span> Glass Identification using K-NN and K-Means Algorithms </span>
       </div>
       <div class="project-description">
         <strong>Description: </strong>
@@ -255,7 +257,7 @@
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
-        <span> 8 </span>
+        <span> Skin Detection using Naive Bayes Algorithm </span>
       </div>
       <div class="project-description">
         <strong>Description: </strong>
@@ -274,7 +276,7 @@
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
-        <span> 9 </span>
+        <span> Leaf Prediction using KNN </span>
       </div>
       <div class="project-description">
         <strong>Description: </strong>
@@ -293,7 +295,7 @@
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
-        <span> 10 </span>
+        <span> Image Pixel Clustering using K-Means Algorithm </span>
       </div>
       <div class="project-description">
         <strong>Description: </strong>
@@ -312,7 +314,7 @@
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
-        <span> 11 </span>
+        <span> K-D Tree Implementation </span>
       </div>
       <div class="project-description">
         <strong>Description: </strong>
@@ -331,7 +333,28 @@
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
-        <span> 12 </span>
+        <span> Anova Test </span>
+      </div>
+      <div class="project-description">
+        <strong>Description: </strong>
+        <span> </span>
+      </div>
+      <div class="project-tool">
+        <strong>Tools: </strong>
+        <span></span>
+      </div>
+      <div class="project-link">
+        <strong>Links: </strong>
+        <span></span>
+      </div>
+    </div>
+
+    <div class="project-title">Development Projects</div>
+
+    <div class="project-container">
+      <div class="project-name">
+        <strong>Project: </strong>
+        <span> Udemy Web UI </span>
       </div>
       <div class="project-description">
         <strong>Description: </strong>
@@ -350,7 +373,7 @@
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
-        <span> 13 </span>
+        <span> News Stories Web UI </span>
       </div>
       <div class="project-description">
         <strong>Description: </strong>
@@ -369,7 +392,7 @@
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
-        <span> 14 </span>
+        <span> News Stories API </span>
       </div>
       <div class="project-description">
         <strong>Description: </strong>
@@ -388,26 +411,7 @@
     <div class="project-container">
       <div class="project-name">
         <strong>Project: </strong>
-        <span> 15 </span>
-      </div>
-      <div class="project-description">
-        <strong>Description: </strong>
-        <span> </span>
-      </div>
-      <div class="project-tool">
-        <strong>Tools: </strong>
-        <span></span>
-      </div>
-      <div class="project-link">
-        <strong>Links: </strong>
-        <span></span>
-      </div>
-    </div>
-
-    <div class="project-container">
-      <div class="project-name">
-        <strong>Project: </strong>
-        <span> 16 </span>
+        <span> Ride Sharing System </span>
       </div>
       <div class="project-description">
         <strong>Description: </strong>
@@ -613,6 +617,4 @@
       </div>
     </div>
   </div>
-
-  <div class="project-title">Development Projects</div>
 </div>
